--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ website/node_modules
 
 website/vendor
 .clineignore
+terraform-provider-crowdstrike
+*terraform-provider-crowdstrike*
 
 # Test exclusions
 !command/test-fixtures/**/*.tfstate
