--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ website/node_modules
 *.test
 *.
 .clinerules/
+terraform-provider-crowdstrike
+*terraform-provider-crowdstrike*
 
 website/vendor
 .clineignore
